feat: added vehicle controller and DTO
